kubernetes/01-apache/B-00-k8s-apacherr-ns.yaml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "b-apacherr"
  labels:
    name: "b-apacherr"
