kubernetes/01-apache/B-01-k8s-apacherr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apacherr-svc
  namespace: b-apacherr
  labels:
    app: apacherr
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apacherr
